<resources>
    <!--系统设置-->
    <string name="app_name">戴维医疗</string>
    <string name="upper_version_id" translatable="false">1.0.0</string>
    <!--<string name="device_model" translatable="false">YP-2008S</string>-->
    <!--<string name="device_model" translatable="false">YP-3000S</string>-->
    <!--<string name="device_model" translatable="false">YP-2000S</string>-->
    <!--<string name="device_model" translatable="false">HKN-93S</string>-->
    <string name="device_model" translatable="false">YP-970S</string>

    <!--网络设置-->
    <bool name="enable_cloud" translatable="false">false</bool>
    <string name="cloud_ip" translatable="false">192.168.1.107</string>
    <integer name="cloud_port" translatable="false">8180</integer>

    <!--默认语言-->
    <string name="language" translatable="false">CHINESE</string>

    <!--Home-->
    <string name="default_user">默认用户</string>

    <!--Objective-->
    <string name="ok">确认</string>
    <string name="on">开启</string>
    <string name="off">关闭</string>
    <string name="blue_time">光源总计时</string>
    <string name="clockwise">顺计时</string>
    <string name="countdown">倒计时</string>

    <!--Chart-->
    <string name="cycle">周期</string>
    <string name="skin1">肤温1</string>
    <string name="skin2">肤温2</string>
    <string name="mat">床温</string>

    <string name="air">箱温</string>
    <string name="humidity">湿度</string>
    <string name="oxygen">氧气</string>
    <string name="spo2">血氧</string>
    <string name="pr">脉搏</string>
    <string name="heating_power">加热功率</string>
    <string name="time">时间</string>
    <string name="previous_page">向前</string>
    <string name="next_page">向后</string>
    <string name="delete">删除</string>
    <string name="delete_confirm">请确认删除数据</string>

    <!--SpO2-->
    <string name="sens" translatable="false">SENS</string>
    <string name="avg_time" translatable="false">AVG Time</string>
    <string name="fast_sat" translatable="false">FastSAT</string>

    <!--Camera-->
    <string name="camera_no_connection">请连接摄像头</string>


    <!--todo-->
    <string name="capture_confirm">已添加%s</string>
    <string name="capture_failed">拍照失败</string>


    <!--Scale-->
    <string name="rescale">重新称重</string>
    <string name="scale">称重</string>
    <string name="raise_baby">请抱起婴儿...</string>
    <string name="put_down_baby">请放下婴儿...</string>
    <string name="no_record_added">没有新数据</string>
    <string name="current_weight">重量</string>

    <!--Setting-->

    <!--Add User -->
    <string name="name">姓名</string>
    <string name="id">编号</string>
    <string name="sex">性别</string>
    <string name="blood_type">血型</string>
    <string name="birthday">出生日期</string>
    <string name="birth_weight">出生体重</string>
    <string name="medical_history">病例</string>
    <string name="add_patient">添加患者</string>

    <string name="male">男</string>
    <string name="female">女</string>

    <!--Comfort Zone-->
    <string name="comfort_zone">舒适区</string>
    <string name="age">年龄</string>
    <string name="day">天</string>
    <string name="gestation">胎龄</string>
    <string name="week">周</string>
    <string name="weight">体重</string>
    <string name="proposed_setting_range">建议设置区间:</string>

    <!--Calibration-->
    <string name="calibration">传感器校准</string>
    <string name="calibration_o2">氧气传感器校准</string>
    <string name="calibration_confirm_o2_21">请确认是否在21%氧浓度下校准</string>
    <string name="calibration_confirm_o2_100">请确认是否在100%氧浓度下校准</string>
    <string name="calibration_scale">称重传感器校准</string>
    <string name="calibration_confirm_scale_0">当前称重%sg\n请确认称重是否在0g下校准</string>
    <string name="calibration_confirm_scale_5000">当前称重%sg\n请确认称重是否在5000g下校准</string>
    <string name="cancel">取消</string>
    <string name="calibration_successful">校准成功</string>
    <string name="calibration_failed">校准失败</string>
    <string name="time_update">时间修改</string>
    <string name="time_update_confirm">历史数据将被删除，是否修改？</string>

    <!--Device-->
    <string name="software_information">软件信息</string>
    <string name="hardware_version">硬件版本</string>
    <string name="master_version">主机软件版本</string>
    <string name="slave_version">从机软件版本</string>
    <string name="upper_version">上位机软件版本</string>
    <string name="device_id">设备编号</string>

    <!--Login-->
    <string name="input_password">请输入密码</string>

    <!--System-->
    <string name="system_setting">系统设置</string>

    <!--Home-->
    <string name="deviation_warning">偏差报警</string>
    <string name="overheat_warning">超温报警</string>
    <string name="setting_range">设置范围</string>
    <string name="temp_calibration">温度校准</string>
    <string name="other_parameter">其他参数</string>
    <string name="data_print">数据打印</string>
    <string name="factory_setting">出厂设置</string>
    <string name="overheat_experiment">超温试验</string>

    <!--Deviation Warning-->
    <string name="skin">肤温</string>
    <string name="exit">返回</string>

    <!--Overheat Warning-->
    <string name="overheat_air_above_37">箱温&gt;37</string>
    <string name="air_flow">风道</string>
    <string name="overheat_airflow_above_37">风道&gt;37</string>
    <string name="fan_speed">风机转速</string>

    <!--System Calibration-->
    <string name="iso_air">箱温独立</string>
    <string name="iso_skin1">肤温1独立</string>

    <!--System Print-->
    <string name="print_cycle">打印周期</string>
    <string name="hours">小时</string>
    <string name="days">天</string>

    <!--Overheat Experiment-->
    <string name="overheat_air_below_37">箱温≤37</string>
    <string name="overheat_skin_above_37">肤温&gt;37</string>
    <string name="stable_state">稳定状态</string>

    <!--User -->
    <string name="user_setting">用户设置</string>
    <string name="patient_information">患者信息</string>
    <string name="time_setup">时间设置</string>
    <string name="language_setup">语言设置</string>
    <string name="warning_volume">报警音量</string>
    <string name="screen_luminance">屏幕亮度</string>

    <string name="delete_user">患者删除</string>
    <string name="signs_data">体征数据</string>
    <string name="video_data">视频数据</string>
    <string name="image_data">照片数据</string>

    <!--User -->
    <string name="reset_lower">重置</string>
    <string name="reset_upper">重置上位机</string>

    <!--Alarm-->
    <string name="SYS.PWR">电源故障</string>
    <string name="SYS.CON">串口通讯故障</string>
    <string name="SYS.BCON">控制仪与传感器盒通讯故障</string>
    <string name="SYS.HA">主从机通讯故障报警</string>
    <string name="SYS.CFG">备份配置数据损坏</string>
    <string name="SYS.HOOD">箱篷故障报警</string>
    <string name="SYS.MOTOR">升降系统故障</string>
    <string name="SYS.DOOR">辐射门故障报警</string>
    <string name="SYS.WARM1">温度加热系统故障</string>
    <string name="SYS.WARM2">辐射加热系统故障</string>
    <string name="SYS.MATC">床垫加热系统故障</string>

    <string name="SYS.BOX">传感器盒放置错误报警</string>
    <string name="SEN.A1">箱温传感器故障报警</string>
    <string name="SEN.A2">独立温度传感器故障报警</string>
    <string name="SEN.ADIF">箱温传感器差异故障报警</string>
    <string name="SEN.F1">风道温度传感器故障报警</string>
    <string name="SEN.M1">床温传感器故障报警</string>
    <string name="SEN.M2">床温独立传感器故障报警</string>
    <string name="SEN.MDIF">床温传感器差异故障报警 </string>

    <string name="SEN.S1A">肤温传感器1故障报警</string>
    <string name="SEN.S1B">独立肤温传感器故障报警</string>
    <string name="SEN.S2">肤温传感器2故障报警</string>
    <string name="SEN.SDIF">肤温传感器差异故障报警</string>
    <string name="SEN.SCALE">体重秤传感器故障</string>
    <string name="AIR.OVH">箱温超温报警</string>
    <string name="MAT.OVH">床温超温报警</string>

    <string name="SKIN.OVH">肤温超温报警</string>
    <string name="FLOW.OVH">风道超温报警</string>
    <string name="CTRL.SEN">肤温传感器放置错误报警</string>
    <string name="SYS.FAN">风机故障报警</string>
    <string name="TEMP.DEVH">温度上偏差报警</string>
    <string name="TEMP.DEVL">温度下偏差报警</string>
    <string name="CTRL.ERR1">设置报警A</string>
    <string name="CTRL.ERR2">设置报警C</string>
    <string name="CTRL.MAN">手控检查报警</string>
    <string name="SEN.O2_1">O₂传感器1故障报警</string>
    <string name="SEN.O2_2">O₂传感器2故障报警</string>
    <string name="SEN.O2DIF">O₂传感器差异报警</string>
    <string name="O2.DEVH">O₂上偏差报警</string>
    <string name="O2.DEVL">O₂下偏差报警</string>
    <string name="SEN.SPO2">血氧模块故障报警</string>
    <string name="SPO2.ERR">血氧系统报警</string>
    <string name="SPO2.BIT12">导电线未连接</string>
    <string name="SPO2.BIT0">血氧传感器连接错误</string>
    <string name="SPO2.BIT1">血氧传感器故障</string>
    <string name="SPO2.BIT7">血氧传感器无法识别</string>
    <string name="SPO2.BIT5">血氧传感器脱落</string>
    <string name="SPO2.BIT13">未连接粘黏探头</string>
    <string name="SPO2.OVH">SpO₂上限报警</string>
    <string name="SPO2.OVL">SpO₂下限报警</string>
    <string name="PR.OVH">脉搏上限报警</string>
    <string name="PR.OVL">脉搏下限报警</string>
    <string name="UNIT.FAN">控制仪内风扇故障报警</string>
    <string name="SYS.HUMC">湿度加热系统故障报警</string>
    <string name="SEN.HUM">湿度传感器故障报警</string>
    <string name="SYS.TANK">水箱放置错误报警</string>
    <string name="SYS.WATER">缺水报警</string>
    <string name="HUM.DEVH">湿度上偏差报警</string>
    <string name="HUM.DEVL">湿度下偏差报警</string>
    <string name="SYS.UPS">镍氢电池报警</string>
    <string name="SPO2.BIT2">低血流灌注</string>
    <string name="SPO2.LOW">血氧饱和度低于85%</string>
    <string name="SPO2.BIT3">搜寻脉搏</string>
    <string name="SPO2.BIT4">探测到干扰</string>
    <string name="SPO2.BIT6">太多环境光</string>
    <string name="SPO2.BIT10">低信号质量</string>
    <string name="COM.ERR">串口通讯返回ERR</string>

    <string name="manual">手动</string>
    <string name="prewarm">预热</string>

</resources>