<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.david.incubator.ui.common.TitleView
            android:id="@+id/title"
            android:layout_width="464dp"
            android:layout_height="@dimen/y60"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/systemDeviationWarning"
            style="@style/large_button_style"
            android:text="@string/deviation_warning"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toTopOf="@+id/systemCalibration"
            app:layout_constraintEnd_toStartOf="@+id/systemOverheatWarning"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/systemOverheatWarning"
            style="@style/large_button_style"
            android:text="@string/overheat_warning"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toBottomOf="@id/systemDeviationWarning"
            app:layout_constraintEnd_toStartOf="@+id/systemRange"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/systemDeviationWarning"
            app:layout_constraintTop_toTopOf="@id/systemDeviationWarning" />

        <Button
            android:id="@+id/systemRange"
            style="@style/large_button_style"
            android:text="@string/setting_range"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toBottomOf="@id/systemDeviationWarning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/systemOverheatWarning"
            app:layout_constraintTop_toTopOf="@id/systemDeviationWarning" />

        <Button
            android:id="@+id/systemCalibration"
            style="@style/large_button_style"
            android:text="@string/temp_calibration"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toTopOf="@+id/systemOverheatExperiment"
            app:layout_constraintEnd_toStartOf="@+id/systemOverheatWarning"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/systemDeviationWarning" />

        <Button
            android:id="@+id/systemOtherParameter"
            style="@style/large_button_style"
            android:text="@string/other_parameter"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toBottomOf="@id/systemCalibration"
            app:layout_constraintLeft_toLeftOf="@id/systemOverheatWarning"
            app:layout_constraintRight_toRightOf="@id/systemOverheatWarning"
            app:layout_constraintTop_toTopOf="@id/systemCalibration" />

        <Button
            android:id="@+id/systemDataPrint"
            style="@style/large_button_style"
            android:text="@string/data_print"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toBottomOf="@id/systemCalibration"
            app:layout_constraintLeft_toLeftOf="@id/systemRange"
            app:layout_constraintRight_toRightOf="@id/systemRange"
            app:layout_constraintTop_toTopOf="@id/systemCalibration" />

        <Button
            android:id="@+id/systemOverheatExperiment"
            style="@style/large_button_style"
            android:text="@string/overheat_experiment"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/systemOverheatWarning"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/systemCalibration" />

        <Button
            android:id="@+id/systemFactorySetting"
            style="@style/large_button_style"
            android:text="@string/factory_setting"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toBottomOf="@id/systemOverheatExperiment"
            app:layout_constraintLeft_toLeftOf="@id/systemOverheatWarning"
            app:layout_constraintRight_toRightOf="@id/systemOverheatWarning"
            app:layout_constraintTop_toTopOf="@id/systemOverheatExperiment" />

    </android.support.constraint.ConstraintLayout>
</layout>