<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.david.incubator.ui.common.TitleView
            android:id="@+id/title"
            android:layout_width="464dp"
            android:layout_height="@dimen/y60"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/userPatientInfo"
            style="@style/large_button_style"
            android:text="@string/patient_information"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toTopOf="@+id/userWarningVolume"
            app:layout_constraintEnd_toStartOf="@+id/userTimeSetup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/userTimeSetup"
            style="@style/large_button_style"
            android:text="@string/time_setup"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toBottomOf="@id/userPatientInfo"
            app:layout_constraintEnd_toStartOf="@+id/userLanguageSetup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/userPatientInfo"
            app:layout_constraintTop_toTopOf="@id/userPatientInfo" />

        <Button
            android:id="@+id/userLanguageSetup"
            style="@style/large_button_style"
            android:text="@string/language_setup"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toBottomOf="@id/userPatientInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/userTimeSetup"
            app:layout_constraintTop_toTopOf="@id/userPatientInfo" />

        <Button
            android:id="@+id/userWarningVolume"
            style="@style/large_button_style"
            android:text="@string/warning_volume"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/userPatientInfo"
            app:layout_constraintRight_toRightOf="@id/userPatientInfo"
            app:layout_constraintTop_toBottomOf="@+id/userPatientInfo" />

        <Button
            android:id="@+id/userScreenLuminance"
            style="@style/large_button_style"
            android:text="@string/screen_luminance"
            android:textSize="@dimen/f18"
            app:layout_constraintBottom_toBottomOf="@id/userWarningVolume"
            app:layout_constraintLeft_toLeftOf="@id/userTimeSetup"
            app:layout_constraintRight_toRightOf="@id/userTimeSetup"
            app:layout_constraintTop_toTopOf="@id/userWarningVolume" />

    </android.support.constraint.ConstraintLayout>
</layout>